--- a/WPFClient/WPFClient/WPFClient/App.config
+++ b/WPFClient/WPFClient/WPFClient/App.config
@@ -35,7 +35,7 @@
   <userSettings>
     <WPFClient.Properties.Settings>
       <setting name="host" serializeAs="String">
-        <value>192.168.100.4</value>
+        <value>localhost</value>
       </setting>
       <setting name="dbName" serializeAs="String">
         <value>vnf-md-db</value>
