--- a/WPFClient/WPFClient/WPFClient/Properties/Settings.settings
+++ b/WPFClient/WPFClient/WPFClient/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="host" Type="System.String" Scope="User">
-      <Value Profile="(Default)">192.168.100.4</Value>
+      <Value Profile="(Default)">localhost</Value>
     </Setting>
     <Setting Name="dbName" Type="System.String" Scope="User">
       <Value Profile="(Default)">vnf-md-db</Value>
